added footer bar, not linked to bottom of page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
                 <span>I'm Feeling Luckey</span>
             </button>
         </div>
-</center>
+        <div class="fbar">
+            <ul class="fbarl">
+                <li class="fbarl3"><a href="#">Advertising</a></li>
+                <li class="fbarl2"><a href="#">Business</a></li>
+                <li class="fbarl1"><a href="#">About</a></li>
+            </ul>
+            <ul class="fbarr">
+                <li class="fbarr2"><a href="#">Privacy & Terms</a></li>
+                <li class="fbarr1"><a href="#">Settings</a></li>
+            </ul>
+        </div>
+    </center>
 </body>
 </html>
