added header bar w/ google logo

--- a/search.html
+++ b/search.html
@@ -5,15 +5,22 @@
     <title>Google Search</title>
 </head>
 <body>
-
     <div id="wrap">
         <div id="main">
+            <div id="header">
+                <div class="logo_contain">
+                    <div class="logo"></div>
+                </div>
+                <div class="searchbar"></div>
+                <div class="tools"></div>
+            </div>
         </div>
     </div>
 
     <div id="footer">
         <div class="location">
             <ul>
+                <span class="circle"></span>            
                 <li><a href="#">Unknown</a></li> -
                 <li><a href="#">Use precise location</a></li> -
                 <li><a href="#">Learn more</a></li>
@@ -28,6 +35,5 @@
             </ul>
         </div>
     </div>
-
 </body>
 </html>
