--- a/search.html
+++ b/search.html
@@ -7,12 +7,17 @@
 <body>
     <div id="wrap">
         <div id="main">
-            <div id="header">
-                <div class="logo_contain">
+            <div class="header">
+                <div class="logo_contain h_layout">
                     <div class="logo"></div>
                 </div>
-                <div class="searchbar"></div>
-                <div class="tools"></div>
+                <div class="search_contain h_layout">
+                    <form>
+                        <input class="search_box" type="text">
+                        <input class="search_button" type="button" value="Search">
+                    </form>
+                </div>
+                <div class="tools_contain h_layout"></div>
             </div>
         </div>
     </div>
