added test layout html and css, TODO: merge test with old.

--- a/search.html
+++ b/search.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="reset.css"/>
     <link rel="stylesheet" type="text/css" href="css/search.css"/>
     <title>Google Search</title>
 </head>
@@ -8,16 +9,18 @@
     <div id="wrap">
         <div id="main">
             <div class="header">
-                <div class="logo_contain h_layout">
+                <div class="logo_contain">
                     <div class="logo"></div>
                 </div>
-                <div class="search_contain h_layout">
+                <div class="search_contain">
                     <form>
                         <input class="search_box" type="text">
                         <input class="search_button" type="button" value="Search">
                     </form>
                 </div>
-                <div class="tools_contain h_layout"></div>
+                <div class="tools_contain h_layout">
+                    <a href="#">robin.unger@gmail.com</a>
+                </div>
             </div>
         </div>
     </div>
