added tools bar

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
                     <input class="search_box" type="text">
                     <input class="search_button" type="button" value="Search">
                 </form>
-                <input class="tools" type="button" value="Sign in">
+                <input class="sign_in" type="button" value="Sign in">
             </div>
             <div class="main">
                 <div class="adbartop"></div>
