added top toolbar

--- a/search.html
+++ b/search.html
@@ -1,47 +1,136 @@
-<!doctype html>
 <html>
-<head>
-    <link rel="stylesheet" type="text/css" href="reset.css"/>
-    <link rel="stylesheet" type="text/css" href="css/search.css"/>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+        <link rel="stylesheet" type="text/css" href="css/search.css"/>
+    </head>
     <title>Google Search</title>
-</head>
-<body>
-    <div id="wrap">
-        <div id="main">
-            <div class="header">
-                <div class="logo_contain">
-                    <div class="logo"></div>
-                </div>
-                <div class="search_contain">
-                    <form>
-                        <input class="search_box" type="text">
-                        <input class="search_button" type="button" value="Search">
-                    </form>
-                </div>
-                <div class="tools_contain h_layout">
-                    <a href="#">robin.unger@gmail.com</a>
+    <body>
+        <div class="wrap">
+            <div class="header_bar">
+                <div class="logo"></div>
+                <form class="search_container">
+                    <input class="search_box" type="text">
+                    <input class="search_button" type="button" value="Search">
+                </form>
+                <input class="sign_in" type="button" value="Sign in">
+            </div>
+            <div class="toolbar_top">
+               <ul>
+                    <li><a href="#">Web</a></li>
+                    <li><a href="#">Images</a></li>
+                    <li><a href="#">Maps</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Videos</a></li>
+                    <li><a href="#">More</a></li>
+                    <li><a  href="#">Search Tools</a></li>
+               </ul>
+            </div>
+            <div class="main">
+                <div class="content">
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                       <ul>
+                           <li><a href="#">linkone</a></li> -
+                           <li><a href="#">linktwo</a></li> -
+                           <li><a href="#">linkthree</a></li> -
+                           <li><a href="#">linkfour</a></li>
+                        </ul>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                       <ul>
+                           <li><a href="#">linkone</a></li> -
+                           <li><a href="#">linktwo</a></li> -
+                           <li><a href="#">linkthree</a></li> -
+                           <li><a href="#">linkfour</a></li>
+                        </ul>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
+                    <article class="results">
+                        <h1>Search Result One</h1>
+                        <div class="url">thisisalink.domain</div>
+                        <p>This is a short description of the link.
+                            You can use this description to find
+                            information that you need, quickly,
+                            without opening the link.</p>
+                    </article>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div id="footer">
-        <div class="location">
-            <ul>
-                <span class="circle"></span>            
-                <li><a href="#">Unknown</a></li> -
-                <li><a href="#">Use precise location</a></li> -
-                <li><a href="#">Learn more</a></li>
-            </ul>
+        <div class="footer">
         </div>
-        <div class="botnav">
-            <ul>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Send feedback</a></li>
-                <li><a href="#">Privacy & Terms</a></li>
-                <li><a href="#">Use Google.ca</a></li>
-            </ul>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
