added footer bar with location and about links

--- a/search.html
+++ b/search.html
@@ -24,11 +24,15 @@
                     <li><a href="#">More</a></li>
                     <li><a  href="#">Search Tools</a></li>
                </ul>
+                <input class="tools_button" type="button" value="Tools">
             </div>
             <div class="main">
                 <div class="content">
+                    <div class="search_info">
+                        About 4,660,000,000 results (0.21 seconds)
+                    </div>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -42,7 +46,7 @@
                         </ul>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -56,7 +60,7 @@
                         </ul>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -64,7 +68,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -72,7 +76,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -80,7 +84,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -88,7 +92,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -96,7 +100,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -104,7 +108,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -112,7 +116,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -120,7 +124,7 @@
                             without opening the link.</p>
                     </article>
                     <article class="results">
-                        <h1>Search Result One</h1>
+                        <a href="#"><h1>Search Result One</h1></a>
                         <div class="url">thisisalink.domain</div>
                         <p>This is a short description of the link.
                             You can use this description to find
@@ -131,6 +135,18 @@
             </div>
         </div>
         <div class="footer">
+                <ul class="location_bar">
+                    <div class="circle"></div>
+                    <li>Fort Smith, NT - From your internet address</li>-
+                    <li><a href="#">Use precise location</a></li>-
+                    <li><a href="#">Learn more</a></li>
+                </ul>
+                <ul class="about_bar">
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Send Feedback</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                </ul>
         </div>
     </body>
 </html>
