added related searches

--- a/search.html
+++ b/search.html
@@ -132,6 +132,21 @@
                             without opening the link.</p>
                     </article>
                 </div>
+                <div class="related_searches">
+                    <h1>Searches related to make this page</h1>
+                    <ul class="related_left">
+                        <li><a href="#">search result</a></li>
+                        <li><a href="#">search result</a></li>
+                        <li><a href="#">search result</a></li>
+                        <li><a href="#">search result</a></li>
+                    </ul>
+                    <ul class="related_right">
+                        <li><a href="#">search result</a></li>
+                        <li><a href="#">search result</a></li>
+                        <li><a href="#">search result</a></li>
+                        <li><a href="#">search result</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="footer">
